# tauri_rust_game

./: README.md  cargo.ps1  clippy.ps1
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: interop.rs  levels.rs  main.rs  menu.rs
src-tauri/src/mods/: fight.rs  level_selector.rs  mod.rs
src/css/: content.css  style.css  table.css
src/css/content/: credit.css  fight.css  levels.css  sound.css
src/scripts/: dom.js  index.js  interop.js  levels.js  main.js  mods.js
src/scripts/mods/: credit.js  exit.js  fight.js  levels-selector.js  levels.js  menu.js  sound.js
