[package]
name = "tauri_rust_game"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.127"
rand = "0.8.5"
phf = { version = "0.11.2", features = ["macros"] }
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
# rhai = "1.19.0"

# [build_dependencies]
# tauri-build = "1.5.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Here insted of tauri.conf.json becouse json dons't have comments
# "fs": { "readFile": true, "scope": ["$RESOURCE/*"] },
